--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -54,7 +54,7 @@ Template URL: https://hasthemes.com/
 /*****************************
 01 - Base - Default
 *****************************/
-@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
     margin: 0;
@@ -68,7 +68,7 @@ Template URL: https://hasthemes.com/
 }
 
 body {
-    font-family: "Rubik", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
 }
 
