--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6276,138 +6276,68 @@ hr {
 
 /*  Toaster  */
 
-.notifications {
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
     position: fixed;
-    top: 30px;
-    right: 20px;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
 }
 
-.notifications :where(.toast, .column) {
-    display: flex;
-    align-items: center;
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
-.notifications .toast {
-    width: 400px;
-    position: relative;
-    overflow: hidden;
-    list-style: none;
-    border-radius: 4px;
-    padding: 16px 17px;
-    margin-bottom: 10px;
-    background: var(--light);
-    justify-content: space-between;
-    animation: show_toast 0.3s ease forwards;
-}
-
-@keyframes show_toast {
-    0% {
-        transform: translateX(100%);
+@-webkit-keyframes fadein {
+    from {
+        bottom: 0;
+        opacity: 0;
     }
-    40% {
-        transform: translateX(-5%);
-    }
-    80% {
-        transform: translateX(0%);
-    }
-    100% {
-        transform: translateX(-10px);
+    to {
+        bottom: 30px;
+        opacity: 1;
     }
 }
 
-.notifications .toast.hide {
-    animation: hide_toast 0.3s ease forwards;
-}
-
-@keyframes hide_toast {
-    0% {
-        transform: translateX(-10px);
+@keyframes fadein {
+    from {
+        bottom: 0;
+        opacity: 0;
     }
-    40% {
-        transform: translateX(0%);
-    }
-    80% {
-        transform: translateX(-5%);
-    }
-    100% {
-        transform: translateX(calc(100% + 20px));
+    to {
+        bottom: 30px;
+        opacity: 1;
     }
 }
 
-.toast::before {
-    position: absolute;
-    content: "";
-    height: 3px;
-    width: 100%;
-    bottom: 0;
-    left: 0;
-    animation: progress 5s linear forwards;
-}
-
-@keyframes progress {
-    100% {
-        width: 0;
+@-webkit-keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
+    }
+    to {
+        bottom: 0;
+        opacity: 0;
     }
 }
 
-.toast.success::before, .btn#success {
-    background: var(--success);
-}
-
-.toast.error::before, .btn#error {
-    background: var(--warning);
-}
-
-.toast.warning::before, .btn#warning {
-    background: var(--warning);
-}
-
-.toast.info::before, .btn#info {
-    background: var(--info);
-}
-
-.toast .column i {
-    font-size: 1.75rem;
-}
-
-.toast.success .column i {
-    color: var(--success);
-}
-
-.toast.error .column i {
-    color: var(--warning);
-}
-
-.toast.warning .column i {
-    color: var(--warning);
-}
-
-.toast.info .column i {
-    color: var(--info);
-}
-
-.toast .column span {
-    font-size: 1.07rem;
-    margin-left: 12px;
-}
-
-.toast i:last-child {
-    color: #aeb0d7;
-    cursor: pointer;
-}
-
-.toast i:last-child:hover {
-    color: var(--dark);
-}
-
-@media screen and (max-width: 530px) {
-    .notifications {
-        width: 95%;
+@keyframes fadeout {
+    from {
+        bottom: 30px;
+        opacity: 1;
     }
-
-    .notifications .toast {
-        width: 100%;
-        font-size: 1rem;
-        margin-left: 20px;
+    to {
+        bottom: 0;
+        opacity: 0;
     }
 }
