--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6279,7 +6279,7 @@ hr {
 #snackbar {
     visibility: hidden;
     min-width: 250px;
-    margin-left: -125px;
+    margin-right: 30px;
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -6287,7 +6287,7 @@ hr {
     padding: 16px;
     position: fixed;
     z-index: 1;
-    left: 50%;
+    right: 30px;
     bottom: 30px;
     font-size: 17px;
 }
