--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6224,7 +6224,7 @@ hr {
 }
 
 .product-grid .product-content {
-    padding: 12px 12px 15px;
+    padding: 10px 10px 0 10px;
     position: relative;
 }
 
