--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4033,13 +4033,12 @@ input[type=radio].shipping-select:checked::after {
 
 .footer__copyright-text {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
 }
 
 @media (min-width: 992px) {
     .footer__copyright-text {
         text-align: left;
-        margin-bottom: 0;
     }
 }
 
