--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6101,7 +6101,7 @@ hr {
     overflow: hidden;
     transition: all 0.4s ease-out;
     margin: 15px 0;
-    padding: 10px 10px 0 10px;
+    padding: 10px;
 }
 
 .product-grid:hover {
