--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6493,7 +6493,7 @@ hr {
 
 #progressbar li.active:before,
 #progressbar li.active:after {
-    background: #4bb8a9;
+    background: #0063d1;
 }
 
 .card {
