--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -4303,13 +4303,6 @@ table tbody > tr td a:hover {
     color: #0063d1;
     padding-bottom: 10px;
     border-bottom: 1px solid #e1e1e1;
-    text-transform: capitalize !important;
-}
-
-.offcanvas-add-cart__top-text {
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 0;
 }
 
 .offcanvas-add-cart__top-text i {
@@ -4344,6 +4337,7 @@ table tbody > tr td a:hover {
 
 .offcanvas-add-cart__img {
     width: 100%;
+    border-bottom: 1px solid #e1e1e1;
 }
 
 .offcanvas-add-cart__link {
