--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2816,10 +2816,9 @@ input[type=radio].shipping-select:checked::after {
 }
 
 .your-order-total {
-    padding: 20px 0;
+    padding-top: 20px;
     border-top: 1px solid #dee2e6;
-    border-bottom: 1px solid #dee2e6;
-    margin: 20px 0;
+    margin-top: 20px;
 }
 
 .payment-accordion h4 a {
